sonar-server/src/main/webapp/stylesheets/style.css
/* ... */
/*
  GENERAL
*/
.loading {
  background-image: url("../images/loading.gif");
  background-position: 4px 2px;
  background-repeat: no-repeat;
  color: #444;
  padding: 3px 25px;
}

.right {
  text-align: right;
}

.left {
  text-align: left;
}
code {
  font-size: 93%;
}

.hidden {
  display: none;
  visibility: hidden;
}

.clear {
  height: 0;
  clear: both;
}

.note {
  color: #777;
  font-size: 93%;
  font-weight: normal;
}

.crossout {
  text-decoration: line-through;
}

.small {
  font-size: 85%;
}
a.external {
	background: url('../images/links/external.png') no-repeat 100% 0;
	padding: 0 16px 0px 0;
}
.fav {
  display: inline-block;
  background: url('../images/star.png') no-repeat 100% 0;
  width: 16px;
  height: 16px;
  vertical-align: text-bottom;
}
.notfav {
  display: inline-block;
  background: url('../images/star_off.png') no-repeat 100% 0;
  width: 16px;
  height: 16px;
  vertical-align: text-bottom;
}
button, .button {
  max-height: 20px;
}
/* ------------------- PAGE ------------------- */
h1 {
  color: #444;
  font-size: 16px;
}
h1 a {
  color: #444;
  text-decoration: none;
  border-bottom: 1px dotted #2B547D;
}
h2, .h2 {
  color: #2B547D;
  font-size: 16px;
  font-weight: normal;
}
h2 a {
  color: #2B547D;
  text-decoration: none;
  border-bottom: 1px dotted #2B547D;
}
h3, .h3 {
  font-size: 100%;
  font-weight: bold;
}

h4, .h4 {
  font-size: 85%;
  color: #777;
}
.subtitle {
  color: #777;
  font-size: 85%;
  margin: 0;
  padding: 0;
}
.notes {
  color: #777;
  font-size: 85%;
  margin-bottom: 10px;
  background-color: #f4f4f4;
  border: 1px solid #cdcdcd;
  padding: 4px;
}
.treemap {
  position: relative;
  cursor: pointer;
}

.treemap .label {
  color: #fff;
  padding: 2px;
}

/* ------------------- MESSAGES ------------------- */
.warning {
  border: solid 1px #FFD324;
  background-color: #FFF6BF;
  color: #514721;
  margin: 0 0 4px;
  padding: 4px;
}

.error {
  border: 1px solid red;
  background-color: #FF5252;
  color: #eee;
  margin: 0 0 4px;
  padding: 4px;
}

.error a {
  color: #eee;
}

.notice {
  border: 1px solid #9c9;
  background-color: #e2f9e3;
  color: #060;
  margin: 0 0 4px;
  padding: 4px;
}

/* ------------------- LOGIN FORM ------------------- */
#login_form {
  border: 1px solid #4b9fd5;
  width: 230px;
  text-align: left;
  background-color: #d4e7ff;
  padding: 15px 20px;
}

#login_form h4 {
  text-align: left;
  font-weight: bold;
  color: #036;
}

#login_form p {
  padding: 3px 0 10px;
}
#login_form .desc {
  font-size: 85%;
  font-weight: normal;
}
/* ------------------- DOCUMENTATION --------------------- */
.doc p {
	margin: 10px 0;
}
.doc pre, pre.code {
	color: #777;
	background-color: #f4f4f4;
	padding: 10px;
	margin: 10px 0;
	border: 1px dashed #777;
	font-size: 93%;
	line-height: 1.5em;
}

/* ------------------- TABLES ------------------- */
.odd {
  background-color: #fff;
}
.odd.selected, .even.selected, .odd.selected a, .even.selected a, .even.selected span, .odd.selected span {
  background-color: #4b9fd5;
  color: #fff;
}
table.data thead th {
  font-size: 93%;
  padding: 3px 7px 3px 3px;
}
table.data tfoot td {
  font-size: 93%;
  color: #777;
  padding: 3px 0 3px 10px;
}

table.data tbody td {
  padding: 3px 7px 3px 3px;
  vertical-align: middle;
}
table.data td.small, table.data th.small {
  padding: 0;
  white-space: nowrap;
}
table.data th img, table.data td img {
  vertical-align: middle;
}
.data thead tr.total {
  background-color: #eee;
  font-weight: normal;
  font-size: 108%;
  border-bottom: 1px solid silver;
  border-top: 1px solid silver;
}
.data thead tr.total th {
  font-weight: normal;
}
.data thead tr.blank {
  background-color: #fff;
  line-height: 15px;
}
.data tr.highlight {
  background-color: #CAE3F2;
  border-top: 1px solid #4B9FD5;
  border-bottom: 1px solid #4B9FD5;
}
.hoverable:hover {
  background-color: #CAE3F2;
}

.hoverable:hover a {
  color: #111;
}

table.sortable .sortcol {
  cursor: pointer;
  padding-right: 15px;
  background-repeat: no-repeat;
  background-position: right center;
  text-decoration: underline;
}

table.sortable .sortasc {
  background-image: url('../images/bullet_arrow_up.gif');
  background-position: right center;
}

table.sortable .sortdesc {
  background-image: url('../images/bullet_arrow_down.gif');
  background-position: right center;
}

table.sortable .nosort {
  cursor: default;
}

table.spaced th {
  font-weight: bold;
  color: #333;
  padding: 4px 5px;
}

table.spaced td, table.matrix tfoot td {
  padding: 3px 5px;
  line-height: 18px;
}
table.spaced td img {
  vertical-align: text-bottom;
}

table.spacedicon th {
  font-weight: bold;
  color: #333;
  padding: 4px 5px;
}

table.spacedicon td {
  padding: 0px 5px;
  height: 24px;
}

.thin {
  width: 1%;
}

.nowrap {
  white-space: nowrap;
}
td.sep {
	width: 10px;
}
.spacer {
  width: 5px;
  display: inline-block;
}
.formError {
  display: inline-block;
  background-color: #FF9090;
  color: #000;
  padding: 0 5px;
}
table.form td {
  padding: 2px 5px;
  vertical-align: top;
}
table.form td.first {
  min-width: 120px;
  text-align: right;
  font-weight: bold;
  vertical-align: middle;
}
table.form td img {
  vertical-align: bottom;
}
.admin hr {
  background: transparent;
  border-left:  none;
  border-right: none;
  border-top:   none;
  border-bottom: 1px dashed #FFD324;
  height: 1px;
}



/* OPERATIONS */
#page-operations {
  display: inline-block;
  width: 100%;
}
ul.operations {
  float: right;
  list-style-type: none;
  margin: 0;
  background-color: #f4f4f4;
  border: 1px solid #cdcdcd;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
}
ul.operations li {
  float: left;
  margin: 0;
  padding: 2px 7px;
  position: relative;
  font-size: 85%;
  border-right: 1px solid #cdcdcd;
}
ul.operations li.last {
  border-right-width:0;
}
ul.operations li a {
  color: #555;
}



/* RESOURCE VIEWER */
.resourceName h1 {
	margin: 5px 0;
}
#source {
  margin: 1px;
  padding: 15px 2px 2px;
}
/* ... */

